fix nav spacing in desktop view

--- a/ofcourse/static/css/site.css
+++ b/ofcourse/static/css/site.css
@@ -47,9 +47,11 @@ h1,h2,h3,h4,h5,h6, .jumbotron p {
     color: white;
 }
 
-.navbar .navbar-nav > li > a {
-    padding-top: 10px;
-    padding-bottom: 10px;
+@media(max-width:1200px){
+    .navbar .navbar-nav > li > a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
 }
 
 /* Don't overlap affix below md size*/
